--- a/app/src/main/res/layout/item_lesson.xml
+++ b/app/src/main/res/layout/item_lesson.xml
@@ -6,7 +6,8 @@
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
     android:clipToPadding="false"
-    android:elevation="3dp"
+    android:elevation="4dp"
+    app:cardBackgroundColor="@color/surface"
     app:cardCornerRadius="4dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -19,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginTop="16dp"
-            android:textColor="@android:color/black"
+            android:textColor="@color/text"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -30,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:textColor="@android:color/black"
+            android:textColor="@color/text"
             app:layout_constraintEnd_toEndOf="@+id/startTime"
             app:layout_constraintTop_toBottomOf="@+id/startTime"
             tools:text="19:35" />
@@ -43,7 +44,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
-            android:background="#3A3A3A"
+            android:background="#6AFFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/startTime"
             app:layout_constraintTop_toTopOf="parent" />
@@ -53,7 +54,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
-            android:textColor="@android:color/black"
+            android:textColor="@color/text"
             android:textSize="40sp"
             app:layout_constraintBottom_toBottomOf="@+id/endTime"
             app:layout_constraintStart_toEndOf="@+id/view"
@@ -66,7 +67,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="32dp"
-            android:textColor="@android:color/black"
+            android:textColor="@color/text"
             android:textSize="25sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -78,6 +79,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
+            android:textColor="@color/text_secondary"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/lesson"
             app:layout_constraintTop_toBottomOf="@+id/lesson"
