--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#383B40</color>
+    <color name="colorPrimaryDark">#2D2F34</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="surface">#27292D</color>
+    <color name="base">#1F2023</color>
+    <color name="text">#E6FFFFFF</color>
+    <color name="text_secondary">#B3FFFFFF</color>
 </resources>
