--- a/app/src/main/res/layout/fragment_day.xml
+++ b/app/src/main/res/layout/fragment_day.xml
@@ -11,9 +11,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/base"
-        android:clipToPadding="false"
+        android:clipToPadding="true"
         android:orientation="vertical"
-        android:padding="4dp"
+        android:paddingTop="4dp"
+        android:paddingStart="4dp"
+        android:paddingEnd="4dp"
+        android:paddingBottom="0dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/item_lesson" />
 </merge>
