--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,13 +6,14 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-<!--         <item name="android:textColor">@color/text</item>-->
-<!--         <item name="android:textColorSecondary">@color/text_secondary</item>-->
         <item name="colorControlHighlight">@color/ripple_color</item>
-        <!--when the check box is checked-->
-        <!--<item name="colorControlNormal">#FF4081</item>-->
-        <!--when the check box is unchecked -->
-        <!--<item name="colorControlActivated">#81FF40</item>-->
+    </style>
+
+    <style name="ButtonStyle" parent="android:Widget.Button">
+        <item name="android:textColor">@color/text</item>
+        <item name="android:background">@drawable/drawable_button_background</item>
+        <item name="android:paddingStart">16dp</item>
+        <item name="android:paddingEnd">16dp</item>
     </style>
 
 </resources>
