--- a/app/src/main/res/layout/bottom_sheet_settings.xml
+++ b/app/src/main/res/layout/bottom_sheet_settings.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/bottomSheet"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -13,14 +12,14 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:background="@color/colorAccent"
+        android:layout_height="50dp"
+        android:background="@drawable/background_top_of_bottom_sheet"
         android:gravity="center"
-        android:text="Settings"
-        android:textColor="@android:color/white"
-        android:textSize="40sp" />
+        android:text="Настройки"
+        android:textColor="@color/text"
+        android:textSize="30sp" />
 
-    <by.mrc.schedule.settings.SettingsView
+    <by.mrc.schedule.settings.SettingsViewImpl
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
