--- a/app/src/main/res/layout/item_lesson.xml
+++ b/app/src/main/res/layout/item_lesson.xml
@@ -63,15 +63,19 @@
 
         <TextView
             android:id="@+id/lesson"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:gravity="right"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="32dp"
+            android:layout_marginStart="16dp"
             android:textColor="@color/text"
             android:textSize="25sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1"
+            app:layout_constraintStart_toEndOf="@+id/office"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="ОАиП" />
+            tools:text="ОААПААААААА" />
 
         <TextView
             android:id="@+id/teacher"
