--- a/app/src/main/res/layout/item_teacher.xml
+++ b/app/src/main/res/layout/item_teacher.xml
@@ -22,6 +22,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:textColor="@color/text"
+            android:textIsSelectable="true"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -54,6 +55,7 @@
             android:layout_marginBottom="16dp"
             android:autoLink="all"
             android:textColor="@color/text"
+            android:textIsSelectable="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
