--- a/app/src/main/res/layout/item_lesson.xml
+++ b/app/src/main/res/layout/item_lesson.xml
@@ -4,9 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:clickable="true"
+    android:focusable="true"
     android:layout_margin="4dp"
     android:clipToPadding="false"
     android:elevation="4dp"
+    android:foreground="@drawable/dark_ripple"
     app:cardBackgroundColor="@color/surface"
     app:cardCornerRadius="4dp">
 
