--- a/app/src/main/res/layout/item_lesson.xml
+++ b/app/src/main/res/layout/item_lesson.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:clickable="true"
-    android:focusable="true"
     android:layout_margin="4dp"
+    android:clickable="true"
     android:clipToPadding="false"
     android:elevation="4dp"
+    android:focusable="true"
     android:foreground="@drawable/dark_ripple"
     app:cardBackgroundColor="@color/surface"
     app:cardCornerRadius="4dp">
@@ -22,19 +22,23 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="10dp"
             android:textColor="@color/text"
-            android:textSize="20sp"
+            android:textSize="22sp"
+            app:layout_constraintBottom_toTopOf="@+id/endTime"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed"
             tools:text="18:00" />
 
         <TextView
             android:id="@+id/endTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
+            android:layout_marginBottom="10dp"
             android:textColor="@color/text"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/startTime"
             app:layout_constraintTop_toBottomOf="@+id/startTime"
             tools:text="19:35" />
@@ -59,19 +63,21 @@
             android:layout_marginStart="12dp"
             android:textColor="@color/text"
             android:textSize="40sp"
-            app:layout_constraintBottom_toBottomOf="@+id/endTime"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/view"
-            app:layout_constraintTop_toTopOf="@+id/startTime"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.5"
             tools:text="301" />
 
-        <TextView
+        <by.mrc.schedule.view.AutoResizeTextView
             android:id="@+id/lesson"
             android:layout_width="0dp"
-            android:gravity="right"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="32dp"
+            android:layout_height="30dp"
             android:layout_marginStart="16dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="24dp"
+            android:gravity="right"
+            android:maxLines="2"
             android:textColor="@color/text"
             android:textSize="25sp"
             app:layout_constraintEnd_toEndOf="parent"
