--- a/app/src/main/res/layout/dialog_editing_group_name.xml
+++ b/app/src/main/res/layout/dialog_editing_group_name.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorPrimaryDark"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="8dp">
+    android:layout_margin="8dp"
+    tools:background="@color/colorPrimaryDark">
 
     <TextView
         android:id="@+id/textView"
@@ -42,19 +43,19 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:textColor="@color/text"
         android:completionThreshold="0"
         android:hint="62493"
         android:inputType="text"
-        android:textColorHint="#858585"
         android:padding="8dp"
+        android:textColor="@color/text"
+        android:textColorHint="#858585"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
-        style="@style/ButtonStyle"
         android:id="@+id/buttonSubmit"
+        style="@style/ButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -66,8 +67,8 @@
         app:layout_constraintTop_toBottomOf="@+id/edt_comment" />
 
     <Button
-        style="@style/ButtonStyle"
         android:id="@+id/buttonCancel"
+        style="@style/ButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
