--- a/app/src/main/res/layout/dialog_schedule.xml
+++ b/app/src/main/res/layout/dialog_schedule.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="4dp"
-    android:background="@color/surface">
+    tools:background="@color/surface">
 
     <TextView
         android:id="@+id/startTime"
